--- a/frontend/html5/desafio-modulo2/horarios.html
+++ b/frontend/html5/desafio-modulo2/horarios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template - Utilizar como modelo</title>
+    <title>CLINICA ALEATORIA</title>
 	<style>
 		table, td, th {
 			border: solid 1px black;
