--- a/frontend/html5/desafio-modulo3/simcity.html
+++ b/frontend/html5/desafio-modulo3/simcity.html
@@ -28,7 +28,7 @@
 
     <div>   
         <div class="logo">
-            <img src="assets/images/logo.png" width="200"/>
+            <img src="assets/images/logo.png"/>
         </div>
     </div>
 
